infra/k8s/ingress-srv.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: tickets.dev
      http:
        paths:
          - path: /api/user/currentuser
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
          - path: /api/user/signup
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
          - path: /api/user/signout
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
          - path: /api/user/signin
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
          - path: /api/tickets/test
            pathType: Prefix
            backend:
              service:
                name: tickets-srv
                port:
                  number: 4001
          - path: /api/tickets/createTicket
            pathType: Prefix
            backend:
              service:
                name: tickets-srv
                port:
                  number: 4001
          - path: /api/tickets/getTickets
            pathType: Prefix
            backend:
              service:
                name: tickets-srv
                port:
                  number: 4001
          - path: /api/tickets/updateTicket
            pathType: Prefix
            backend:
              service:
                name: tickets-srv
                port:
                  number: 4001
          - path: /api/tickets/getTicket/([^/]+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tickets-srv
                port:
                  number: 4001
          - path: /api/tickets/deleteTicket/([^/]+)
            pathType: ImplementationSpecific
            backend:
              service:
                name: tickets-srv
                port:
                  number: 4001
          - path: /api/orders/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: orders-srv
                port:
                  number: 4002
          - path: /api/payments/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-srv
                port:
                  number: 4003
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
#/api/comment/addComment/?(*) the star is regular expression, and can be anything
#in our case it will be the Postid
